--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ body {
   background-color: #1ed760;
 }
 
-#suggestions-list {
+/* #suggestions-list {
   margin-top: 5px;
   list-style: none;
   background-color: #333;
@@ -106,7 +106,32 @@ body {
   padding: 5px 10px;
   max-height: 150px;
   overflow-y: auto;
+} */
+
+/* Suggestions List */
+#suggestions-list {
+  list-style: none;
+  padding: 0;
+  margin: 5px 0 0;
+  background-color: #1c1c1c;
+  border: 1px solid #444;
+  border-radius: 5px;
+  max-width: 400px;
+  color: white;
+  position: absolute;
+  z-index: 10;
 }
+
+#suggestions-list li {
+  padding: 10px;
+  cursor: pointer;
+}
+
+#suggestions-list li:hover {
+  background-color: #333;
+}
+
+
 
 /* Music Banner */
 .music-banner {
