--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ body {
 #suggestions-list {
   list-style: none;
   padding: 0;
-  margin: 10px 0 0; /* Increase the margin-top to move the list further down */
+  margin: 20px 0 0; /* Increased margin-top to move the list further down */
   background-color: #1c1c1c;
   border: 1px solid #444;
   border-radius: 5px;
@@ -130,7 +130,6 @@ body {
 #suggestions-list li:hover {
   background-color: #333;
 }
-
 
 /* Music Banner */
 .music-banner {
