--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,7 @@
     font-size: 1.25rem;
   color: #111827;
   margin-bottom: 0.25rem;
+  margin-top: 1.5rem;
   }
   #banner-artist-name {
     font-size: 0.875rem;
@@ -302,7 +303,7 @@
   #playlist-name {
     text-align: center;
     font-size: 1rem;
-    color: #00ffcc; /* Light neon color */
+    color: #0216123f; /* Light neon color */
     text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc, 0 0 30px #00ffcc;
     margin-top: 20px;
   }
